--- a/Second Year/Analisi II/Analisi2.tex
+++ b/Second Year/Analisi II/Analisi2.tex
@@ -600,13 +600,12 @@ Quando $f$ è semplice si cerca una soluzione che \textit{assomiglia} nel senso 
             $\overline{y}(t) = tq_r(t)$ & se $b = 0$ e $a \neq 0$\\
             $\overline{y}(t) = t^2q_r(t)$ & se $b = 0$ e $a = 0$\\
             \hline
-            
         \end{tabular}
     
     \end{figure}
     \item Se $f(t) = Ae^{\lambda t}$ con $\lambda \in \mathbb{C}$. In tal caso, si cerca una soluzione del tipo:
     $y(t) = e^{\lambda t}\gamma(t)$ con $\gamma(t)$ polinomio di grado opportuno.
-    \item Se infiine $\lambda^2 + a\lambda + b = 0$ e $2\lambda + a = 0$ allora si ha $\gamma(t) = A$ da cui:
+    \item Se infine $\lambda^2 + a\lambda + b = 0$ e $2\lambda + a = 0$ allora si ha $\gamma(t) = A$ da cui:
     \[\gamma(t) = \frac{A}{2}t^2 \; \; \; \; \; \;  \overline{y}(t) = \frac{A}{2}t^2e^{\lambda t}\] 
     Quindi si ha una soluzione particolare:
     \[\overline{y}(t) = Ct^2e^{\lambda t}\]
@@ -662,6 +661,7 @@ Quindi andiamo per step e cerchiamo di trovare una soluzione per il termine $t$ 
     \[y_p(t) = \frac{1}{3}t + 2e^{it}\]
 \end{itemize}
 }
+
 
 
 \end{document}
