--- a/Second Year/Sistemi_Operativi/OperatingSystems.tex
+++ b/Second Year/Sistemi_Operativi/OperatingSystems.tex
@@ -614,4 +614,270 @@ echo $id >> student.txt
 \centering
 \includegraphics[width=0.6\textwidth]{pract4ex5.png}
 \end{figure}
+
+\section{Practical 5 -  Unix Part 2}
+
+\begin{minted}{bash}
+    x=8
+    y=5
+    expr $x + $y
+\end{minted}
+\textcolor{green!50!black}{
+One might have supposed that echo would work on the last line above instead of
+expr. Try it with echo and see what happens. Later we’ll see a way of doing what this program
+does using echo.
+}
+If you replace expr with echo, the output will be 8 + 5 instead of the sum of the two numbers. This is because echo simply prints the text, while expr evaluates the expression.
+
+\textcolor{green!50!black}{
+Something for you to find out: Find out how to do
+multiplication in Linux script. It is not as you might suppose,
+simply by replacing + with *
+}
+To perform multiplication in a bash file, you cannot use the * operator directly as it will be interpreted as a wildcard. Instead, you can use the expr command with the * operator enclosed in quotes:
+\begin{minted}{bash}
+expr $x \* $y
+\end{minted}
+\noindent
+\vspace{1em}
+
+\noindent
+\begin{minted}{bash}
+# Sums two numbers supplied on the command line
+#
+if
+    [ $# -ne 2 ]
+then
+    echo two args
+    echo please
+else
+    echo sum is
+    expr $1 + $2
+fi
+\end{minted}
+\textcolor{green!50!black}{
+Modify the above code (addnums.sh) so that a third command line argument is used to
+specify whether the two numbers are to be added or multiplied. 
+}
+
+\begin{minted}{bash}
+if [ $# -ne 3 ]
+then
+    echo "Usage: $0 <num1> <num2> <operation>"
+    exit 1
+else 
+    if [ $3 = "add" ]
+    then
+        echo "Sum is: $(($1 + $2))"
+    elif [ $3 = "multiply" ]
+    then
+        echo "Product is: $(($1 * $2))"
+    else
+        echo "Invalid operation. Please use 'add' or 'multiply'."
+    fi
+fi
+\end{minted}
+\vspace{1em}
+
+\noindent
+\begin{minted}{bash}
+# This script removes all files in the working directory
+echo "This will remove all files in the current working
+directory!"
+echo "Are you sure (y/n)?"
+read response
+if
+    [ $response = "y" ]
+then
+    rm *
+    echo files removed
+else
+    echo not removed
+if
+\end{minted}
+\textcolor{green!50!black}{
+   To do:
+ 4. Rewrite the above program with using != rather than =.
+ 5. Modify the above script to replace
+rm *
+with
+rm –i *
+and note the difference.
+}
+\begin{minted}{bash}
+echo "Are you sure (y/n)?"
+read response
+if [ $response != "y" ]
+then
+    echo "not removed"
+else
+    rm -i *
+    echo "files removed"
+fi
+\end{minted}
+The -i flag prompts the user for confirmation before deleting each file. This adds an extra layer of safety to prevent accidental deletions.
+\vspace{1em}
+
+
+\begin{minted}{bash}
+read mark
+if
+    [ $mark -lt 50 ]
+then
+    echo “Sorry, not passed!”
+fi
+\end{minted}
+\textcolor{green!50!black}
+{
+What difference does it make if the inverted commas
+ around Sorry, not passed!! is omitted?
+}
+If the inverted commas are omitted, the script will produce an error because the shell will interpret the exclamation marks as special characters. The script will not run correctly without the quotes.
+\vspace{1em}
+
+\noindent
+\begin{minted}{bash}
+while
+    [ condition ] space after [ and space before ]
+do
+    commands
+done
+\end{minted}
+\textcolor{green!50!black}
+{
+Something to do: I think you’re allowed to put while [condition] on one line
+with the arbornet linux, but check it out for yourself if you have an account on
+arbornet. Am I right or am I wrong?
+}
+Yes, you can put the while condition on one line without issues. The shell does not require the condition to be on a separate line.
+\vspace{1em}
+
+\noindent
+\begin{minted}{bash}
+a=10
+b=20
+if [ $a != $b ]
+then
+ echo "$a != $b : a is not equal to b"
+else
+ echo "$a != $b: a is equal to b"
+fi
+if [ $a -lt 100 -a $b -gt 15 ]
+then
+ echo "$a -lt 100 -a $b -gt 15 : returns true"
+else
+ echo "$a -lt 100 -a $b -gt 15 : returns false"
+fi
+if [ $a -lt 100 -o $b -gt 100 ]
+then
+ echo "$a -lt 100 -o $b -gt 100 : returns true"
+else
+ echo "$a -lt 100 -o $b -gt 100 : returns false"
+fi
+if [ $a -lt 5 -o $b -gt 100 ]
+then
+ echo "$a -lt 100 -o $b -gt 100 : returns true"
+else
+ echo "$a -lt 100 -o $b -gt 100 : returns false"
+fi
+\end{minted}
+
+
+
+
+\textcolor{green!50!black}
+{
+To do:
+8. Modify the program at the end of section 6 to print all the
+numbers between 1 and 20 except the supposedly
+unlucky 13.
+9. Modify your answer to the above problem to exclude 17
+also.
+10. Modify the above program to print all the numbers
+between 1 and 20 except a number provided by the user
+after a request to do so by the program.
+11. Write a program to print out the series
+1, 3, 6, 10, 15, 21...
+until the number in the series below just below 200.
+}
+\begin{minted}{bash}
+increment=1
+num=1
+while
+    [ $num -le 20 ] 
+do  
+    if
+        [ $num -ne 13 ] || [ $num -ne 17 ]
+    then
+        echo $num
+        num=$(($num + $increment))
+    fi
+done    
+\end{minted}
+\begin{minted}{bash}
+###############################
+increment=1
+num=1
+echo "Enter the number to exclude:"
+read exclude
+while
+    [ $num -le 20 ] 
+do  
+    if
+        [ $num -ne $exclude ]
+    then
+        echo $num
+        num=$(($num + $increment))
+    fi
+done    
+\end{minted}
+\begin{minted}{bash}
+###############################
+increment=1
+num=1
+while
+    [ $num -le 200 ]    
+do
+    echo $num
+    increment=$(($increment + 1))
+    num=$(($num + $increment))
+done
+\end{minted}
+\vspace{1em}
+
+\noindent
+\textcolor{green!50!black}
+{
+12. Write a Linux script to give the user up to 10 chances to guess a
+number the computer is “thinking of”. For example, suppose the
+computer is thinking of the number 53, say, and the user has to guess that.
+Assume the user only knows that the number is between, 40 and 70, say;
+thus he/she has a sporting chance.
+This is a game of chance only, since there’s no skill involved. When the
+game is finished a report is given to the user telling him/her whether he
+guessed correctly or not.
+}
+\begin{minted}{bash}
+#!/bin/bash
+number=53
+chances=0
+echo "Guess a number between 40 and 70:"
+while [ $chances -lt 10 ]
+do
+    read guess
+    if [ $guess -eq $number ]
+    then
+        echo "Congratulations! You guessed correctly."
+        exit 0
+    else
+        echo "Incorrect guess. Try again."
+        chances=$(($chances + 1))
+    fi
+done
+echo "Out of chances. The number was $number."
+\end{minted}
+
+
+
+
 \end{document}
