--- a/setup.sty
+++ b/setup.sty
@@ -15,6 +15,7 @@
 \usepackage{cancel}
 \usepackage{amsmath}
 \usepackage{titlesec}  
+\usepackage{lmodern}
 \usepackage{ulem}      
 \usepackage{minted}
 \usepackage{csquotes}
