--- a/setup.sty
+++ b/setup.sty
@@ -7,6 +7,7 @@
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathreplacing} % for angle arc
 \usetikzlibrary{angles, quotes, calc, positioning, trees} % for drawing angles
+\usetikzlibrary{arrows.meta, decorations.markings}
 \pgfplotsset{compat=1.18,width=10cm}
 \usepackage{tikz-cd}
 \usepackage{booktabs}
