--- a/setup.sty
+++ b/setup.sty
@@ -8,6 +8,7 @@
 \usetikzlibrary{decorations.pathreplacing} % for angle arc
 \usetikzlibrary{angles, quotes, calc, positioning, trees} % for drawing angles
 \usetikzlibrary{arrows.meta, decorations.markings}
+\usepgfplotslibrary{fillbetween}
 \pgfplotsset{compat=1.18,width=10cm}
 \usepackage{tikz-cd}
 \usepackage{booktabs}
